jsoup changelog

*** Release 1.7.2 [PENDING]
 * Refactored the Cleaner to traverse rather than recurse child nodes, to avoid the risk of overflowing the stack.
   <https://github.com/jhy/jsoup/issues/246>

 * When parsing in XML mode, preserve XML declarations (<?xml ... ?>).
   <https://github.com/jhy/jsoup/issues/242>

*** Release 1.7.1 [2012-Sep-23]
 * Improved parse time, now 2.3x faster than previous release, with lower memory consumption.

 * Reduced memory consumption when selecting elements.

 * Introduced finer granularity of exceptions in Jsoup.connect, including HttpStatusException and
   UnsupportedMimeTypeException.
   <https://github.com/jhy/jsoup/issues/229>

 * Fixed an issue when determining the Windows-1254 character-set from a meta tag when run in the Turkish locale.
   <https://github.com/jhy/jsoup/issues/191>

 * Fixed whitespace preservation in <textarea> tags.
   <https://github.com/jhy/jsoup/issues/167>

 * In jsoup.connect, fail faster if the return content type is not supported.
   <https://github.com/jhy/jsoup/issues/153>

 * In jsoup.clean, allow custom OutputSettings, to control pretty printing, character set, and entity escaping.
   <https://github.com/jhy/jsoup/issues/148>

 * Fixed an issue that prevented frameset documents to be cleaned by the Cleaner.
   <https://github.com/jhy/jsoup/issues/154>

 * Fixed an issue when normalising whitespace for strings containing high-surrogate characters.
   <https://github.com/jhy/jsoup/issues/214>

 * If a server doesn't specify a content-type header, treat that as OK.
   <https://github.com/jhy/jsoup/issues/213>

 * If a server returns an unsupported character-set header, attempt to decode the content with the default charset
   (UTF8), instead of bailing with an unsupported charset exception.
   <https://github.com/jhy/jsoup/issues/215>

 * Removed an unnecessary synchronisation in Tag.valueOf, allowing multi-threaded parsing to run faster.
   <https://github.com/jhy/jsoup/issues/238>
