@@ -7,6 +7,9 @@ jsoup changelog
  * When parsing in XML mode, preserve XML declarations (<?xml ... ?>).
    <https://github.com/jhy/jsoup/issues/242>
 
+ * Allow Whitelist test methods to be extended
+   <https://github.com/jhy/jsoup/issues/85>
+
 *** Release 1.7.1 [2012-Sep-23]
  * Improved parse time, now 2.3x faster than previous release, with lower memory consumption.
 
